fix seller view + add customer app config + add all microservices to deploy script mac